# FreeEpicGamesCalendar

./: README.md  main.py  pyproject.toml  research.sh
free_epic_games/: __init__.py  calendar.py  scraper.py  views.py
free_epic_games/templates/: base.html  index.html
